# Seeed-Jetson-DevelopTool

./: .gitignore  CLAUDE.md  CONTEXT.md  INSTALL_GUI.md  MANIFEST.in  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RUN_GUI.sh  copy_l4t.py  jetson_flash_gui.py  pyproject.toml  requirements.txt  run_gui.py  run_v2.py  setup.py  test_gui.py  test_import.py  verify_install.py
Apps/: CONTEXT.md  GUI_GUIDE.md  INSTALL_GUI.md  LICENSE  README.md  RESOURCES.md  RUN_GUI.sh  USAGE.md  run_gui.py  run_v2.py  setup.py  test_gui.py  test_import.py  verify_install.py
Apps/seeed_jetson_flash/: cli.py
Apps/seeed_jetson_flash.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
SKILLS/claude/: HOW_TO_WRITE_SKILLS.md  SOURCE_SKILLS_INDEX.md
SKILLS/claude/vnc-setup/: CLAUDE.md
SKILLS/codex/: SOURCE_SKILLS_INDEX.md
apps/client/: jetson_dev_cli.sh
apps/development/: create_app_workspace.sh
apps/diagnostics/: collect_jetson_logs.sh
apps/flashing/: MANIFEST.in  PROJECT_SUMMARY.md  QUICKSTART.md  copy_l4t.py  jetson_flash_gui.py
docs/: CHANGELOG_LOCAL.md  LIST_PAGE_BASE_GUIDE.md  REFACTORING_PLAN.md  VIDEO_SCRIPT.md
scripts/: build_installer.py  check_locales.py  compare_project_dirs.py  flash_jetson.sh  generate_jetson_examples_market.py
seeed_jetson_develop/: __init__.py  cli.py  flash.py  recovery.py
seeed_jetson_develop/core/: __init__.py  config.py  device.py  events.py  platform_detect.py  runner.py
seeed_jetson_develop/data/: l4t_data.json  product_images.json  recovery_guides.json  recovery_guides.py
seeed_jetson_develop/gui/: ai_chat.py  flash_animation.py  i18n.py  i18n_binding.py  main_window.py  main_window_modern.py  main_window_sdk.py  main_window_v2.py  runtime_i18n.py  styles.py  theme.py
seeed_jetson_develop/tmp-refer/: FlashCodeBlock.jsx  Flash_Jetpack.mdx  L4TData.json
(+327 files in other folders)
